<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TestSensorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceleration_sensor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/accelerometer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/linear_acceleration_sensor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/linear_accelerometer_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gravity_sensor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gravity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gyroscope_sensor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/gyroscope_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/magnetic_field_sensor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/magnetic_field_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>
</ScrollView>